--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-indicators": "^1.0.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.8.3",
     "web-vitals": "^2.1.4"
