--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-loading-indicators": "^1.0.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "reactflow": "^11.8.3",
     "web-vitals": "^2.1.4"
   },
