--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-indicators": "^1.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "reactflow": "^11.8.3",
