--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "@xyflow/react": "^12.3.6",
     "axios": "^1.7.9",
     "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
+    "lottie-web": "^5.12.2",
     "query-string": "^9.1.1",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-compiler-runtime": "^19.0.0-beta-e1e972c-20250221",
     "react-dom": "^18.2.0",
     "react-loading-indicators": "^1.0.0",
