Separated backend into public and private endpoints, changed CopyBlock theme to dracula because yes.

--- a/backend/template.env
+++ b/backend/template.env
@@ -15,7 +15,7 @@ MONGODB_PASS = ""
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 DISCORD_BOT_TOKEN=""
-DISCORD_REDIRECT_URI="http://127.0.0.1:8000/auth/discord/callback"
+DISCORD_REDIRECT_URI="http://127.0.0.1:8000/private/auth/discord/callback"
 DISCORD_AUTH_URL=""
 DISCORD_TOKEN_URL=https://discord.com/api/oauth2/token
 DISCORD_API_URL=https://discord.com/api/v10
@@ -24,4 +24,12 @@ DISCORD_API_URL=https://discord.com/api/v10
 NOTION_CLIENT_ID = ""
 NOTION_CLIENT_SECRET = ""
 NOTION_AUTH_URL = ""
-NOTION_REDIRECT_URI = 'http://127.0.0.1:8000/auth/notion/callback'
+NOTION_REDIRECT_URI = 'http://127.0.0.1:8000/private/auth/notion/callback'
+
+# Airtable
+AIRTABLE_CLIENT_ID = ""
+AIRTABLE_CLIENT_SECRET = ""
+AIRTABLE_REDIRECT_URI = 'http://127.0.0.1:8000/private/auth/airtable/callback'
+AIRTABLE_AUTH_URL= "https://airtable.com/oauth2/v1/authorize"
+AIRTABLE_TOKEN_URL= "https://airtable.com/oauth2/v1/token"
+AIRTABLE_API_URL= "https://api.airtable.com/v0"
